Predictions for the future with current statistics

--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -204,7 +204,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
+       "      <th>512</th>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>Jalen Brunson</td>\n",
@@ -225,10 +225,10 @@
        "      <td>0.847</td>\n",
        "      <td>11.2</td>\n",
        "      <td>0.198</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>504</th>\n",
+       "      <th>513</th>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>Jayson Tatum</td>\n",
@@ -249,10 +249,10 @@
        "      <td>0.833</td>\n",
        "      <td>10.4</td>\n",
        "      <td>0.189</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>505</th>\n",
+       "      <th>514</th>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
        "      <td>Anthony Edwards</td>\n",
@@ -273,10 +273,10 @@
        "      <td>0.836</td>\n",
        "      <td>7.5</td>\n",
        "      <td>0.130</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>506</th>\n",
+       "      <th>515</th>\n",
        "      <td>7</td>\n",
        "      <td>8</td>\n",
        "      <td>Domantas Sabonis</td>\n",
@@ -297,10 +297,10 @@
        "      <td>0.704</td>\n",
        "      <td>12.6</td>\n",
        "      <td>0.206</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>507</th>\n",
+       "      <th>516</th>\n",
        "      <td>8</td>\n",
        "      <td>9</td>\n",
        "      <td>Kevin Durant</td>\n",
@@ -321,11 +321,11 @@
        "      <td>0.856</td>\n",
        "      <td>8.3</td>\n",
        "      <td>0.142</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>508 rows × 22 columns</p>\n",
+       "<p>517 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -336,11 +336,11 @@
        "3             3    4   Charles Barkley   27  PHI      2      222      960   \n",
        "4             4    5       Karl Malone   27  UTA      0      142      960   \n",
        "..          ...  ...               ...  ...  ...    ...      ...      ...   \n",
-       "503           4    5     Jalen Brunson   27  NYK      0      142      990   \n",
-       "504           5    6      Jayson Tatum   25  BOS      0       86      990   \n",
-       "505           6    7   Anthony Edwards   22  MIN      0       18      990   \n",
-       "506           7    8  Domantas Sabonis   27  SAC      0        3      990   \n",
-       "507           8    9      Kevin Durant   35  PHO      0        1      990   \n",
+       "512           4    5     Jalen Brunson   27  NYK      0      142      990   \n",
+       "513           5    6      Jayson Tatum   25  BOS      0       86      990   \n",
+       "514           6    7   Anthony Edwards   22  MIN      0       18      990   \n",
+       "515           7    8  Domantas Sabonis   27  SAC      0        3      990   \n",
+       "516           8    9      Kevin Durant   35  PHO      0        1      990   \n",
        "\n",
        "     Share   G  ...   TRB   AST  STL  BLK    FG%    3P%    FT%    WS  WS/48  \\\n",
        "0    0.928  82  ...   6.0   5.5  2.7  1.0  0.539  0.312  0.851  20.3  0.321   \n",
@@ -349,11 +349,11 @@
        "3    0.231  67  ...  10.1   4.2  1.6  0.5  0.570  0.284  0.722  13.4  0.258   \n",
        "4    0.148  82  ...  11.8   3.3  1.1  1.0  0.527  0.286  0.770  15.5  0.225   \n",
        "..     ...  ..  ...   ...   ...  ...  ...    ...    ...    ...   ...    ...   \n",
-       "503  0.143  77  ...   3.6   6.7  0.9  0.2  0.479  0.401  0.847  11.2  0.198   \n",
-       "504  0.087  74  ...   8.1   4.9  1.0  0.6  0.471  0.376  0.833  10.4  0.189   \n",
-       "505  0.018  79  ...   5.4   5.1  1.3  0.5  0.461  0.357  0.836   7.5  0.130   \n",
-       "506  0.003  82  ...  13.7   8.2  0.9  0.6  0.594  0.379  0.704  12.6  0.206   \n",
-       "507  0.001  75  ...   6.6   5.0  0.9  1.2  0.523  0.413  0.856   8.3  0.142   \n",
+       "512  0.143  77  ...   3.6   6.7  0.9  0.2  0.479  0.401  0.847  11.2  0.198   \n",
+       "513  0.087  74  ...   8.1   4.9  1.0  0.6  0.471  0.376  0.833  10.4  0.189   \n",
+       "514  0.018  79  ...   5.4   5.1  1.3  0.5  0.461  0.357  0.836   7.5  0.130   \n",
+       "515  0.003  82  ...  13.7   8.2  0.9  0.6  0.594  0.379  0.704  12.6  0.206   \n",
+       "516  0.001  75  ...   6.6   5.0  0.9  1.2  0.523  0.413  0.856   8.3  0.142   \n",
        "\n",
        "     Year  \n",
        "0    1991  \n",
@@ -362,13 +362,13 @@
        "3    1991  \n",
        "4    1991  \n",
        "..    ...  \n",
-       "503  2024  \n",
-       "504  2024  \n",
-       "505  2024  \n",
-       "506  2024  \n",
-       "507  2024  \n",
+       "512  2025  \n",
+       "513  2025  \n",
+       "514  2025  \n",
+       "515  2025  \n",
+       "516  2025  \n",
        "\n",
-       "[508 rows x 22 columns]"
+       "[517 rows x 22 columns]"
       ]
      },
      "execution_count": 2,
@@ -673,64 +673,88 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20564</th>\n",
-       "      <td>766</td>\n",
-       "      <td>569</td>\n",
-       "      <td>Ron Harper Jr.</td>\n",
-       "      <td>23</td>\n",
-       "      <td>TOR</td>\n",
+       "      <th>21048</th>\n",
+       "      <td>479</td>\n",
+       "      <td>459</td>\n",
+       "      <td>Riley Minix</td>\n",
+       "      <td>24</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21049</th>\n",
+       "      <td>480</td>\n",
+       "      <td>460</td>\n",
+       "      <td>Markieff Morris</td>\n",
+       "      <td>35</td>\n",
+       "      <td>DAL</td>\n",
        "      <td>PF</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20565</th>\n",
-       "      <td>767</td>\n",
-       "      <td>570</td>\n",
-       "      <td>Justin Jackson</td>\n",
-       "      <td>28</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20566</th>\n",
-       "      <td>768</td>\n",
-       "      <td>571</td>\n",
-       "      <td>Dmytro Skapintsev</td>\n",
+       "      <th>21050</th>\n",
+       "      <td>481</td>\n",
+       "      <td>461</td>\n",
+       "      <td>Drew Peterson</td>\n",
        "      <td>25</td>\n",
-       "      <td>NYK</td>\n",
-       "      <td>C</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21051</th>\n",
+       "      <td>482</td>\n",
+       "      <td>462</td>\n",
+       "      <td>Jalen Pickett</td>\n",
+       "      <td>25</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>SG</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -742,35 +766,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20567</th>\n",
-       "      <td>769</td>\n",
-       "      <td>572</td>\n",
-       "      <td>Javonte Smart</td>\n",
-       "      <td>24</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20568</th>\n",
-       "      <td>770</td>\n",
+       "      <th>21052</th>\n",
+       "      <td>483</td>\n",
        "      <td>NaN</td>\n",
        "      <td>League Average</td>\n",
        "      <td>NaN</td>\n",
@@ -790,54 +790,54 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20569 rows × 33 columns</p>\n",
+       "<p>21053 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0   Rk             Player  Age Team  Pos    G   GS    MP  \\\n",
-       "0               0    1     Michael Jordan   27  CHI   SG   82   82  37.0   \n",
-       "1               1    2        Karl Malone   27  UTA   PF   82   82  40.3   \n",
-       "2               2    3       Bernard King   34  WSB   SF   64   64  37.5   \n",
-       "3               3    4    Charles Barkley   27  PHI   SF   67   67  37.3   \n",
-       "4               4    5      Patrick Ewing   28  NYK    C   81   81  38.3   \n",
-       "...           ...  ...                ...  ...  ...  ...  ...  ...   ...   \n",
-       "20564         766  569     Ron Harper Jr.   23  TOR   PF    1    0   4.0   \n",
-       "20565         767  570     Justin Jackson   28  MIN   SF    2    0   0.5   \n",
-       "20566         768  571  Dmytro Skapintsev   25  NYK    C    2    0   1.0   \n",
-       "20567         769  572      Javonte Smart   24  PHI   PG    1    0   1.0   \n",
-       "20568         770  NaN     League Average  NaN  NaN  NaN  NaN  NaN   NaN   \n",
+       "       Unnamed: 0   Rk           Player  Age Team  Pos    G   GS    MP    FG  \\\n",
+       "0               0    1   Michael Jordan   27  CHI   SG   82   82  37.0  12.1   \n",
+       "1               1    2      Karl Malone   27  UTA   PF   82   82  40.3  10.3   \n",
+       "2               2    3     Bernard King   34  WSB   SF   64   64  37.5  11.1   \n",
+       "3               3    4  Charles Barkley   27  PHI   SF   67   67  37.3   9.9   \n",
+       "4               4    5    Patrick Ewing   28  NYK    C   81   81  38.3  10.4   \n",
+       "...           ...  ...              ...  ...  ...  ...  ...  ...   ...   ...   \n",
+       "21048         479  459      Riley Minix   24  SAS   SF    1    0   7.0   0.0   \n",
+       "21049         480  460  Markieff Morris   35  DAL   PF    1    0   5.0   0.0   \n",
+       "21050         481  461    Drew Peterson   25  BOS   PF    3    0   2.3   0.0   \n",
+       "21051         482  462    Jalen Pickett   25  DEN   SG    2    0   2.0   0.0   \n",
+       "21052         483  NaN   League Average  NaN  NaN  NaN  NaN  NaN   NaN   NaN   \n",
        "\n",
-       "         FG  ...  DRB   TRB  AST  STL  BLK  TOV   PF   PTS  \\\n",
-       "0      12.1  ...  4.6   6.0  5.5  2.7  1.0  2.5  2.8  31.5   \n",
-       "1      10.3  ...  8.9  11.8  3.3  1.1  1.0  3.0  3.3  29.0   \n",
-       "2      11.1  ...  3.2   5.0  4.6  0.9  0.3  4.0  2.9  28.4   \n",
-       "3       9.9  ...  6.3  10.1  4.2  1.6  0.5  3.1  2.6  27.6   \n",
-       "4      10.4  ...  8.8  11.2  3.0  1.0  3.2  3.6  3.5  26.6   \n",
-       "...     ...  ...  ...   ...  ...  ...  ...  ...  ...   ...   \n",
-       "20564   0.0  ...  0.0   0.0  1.0  0.0  0.0  0.0  2.0   0.0   \n",
-       "20565   0.0  ...  0.0   0.0  0.0  0.0  0.0  0.0  0.0   0.0   \n",
-       "20566   0.0  ...  0.0   0.0  0.0  0.0  0.0  0.0  0.0   0.0   \n",
-       "20567   0.0  ...  0.0   0.0  0.0  0.0  0.0  0.0  0.0   0.0   \n",
-       "20568   NaN  ...  NaN   NaN  NaN  NaN  NaN  NaN  NaN   NaN   \n",
+       "       ...  DRB   TRB  AST  STL  BLK  TOV   PF   PTS                 Awards  \\\n",
+       "0      ...  4.6   6.0  5.5  2.7  1.0  2.5  2.8  31.5   MVP-1,DPOY-7,AS,NBA1   \n",
+       "1      ...  8.9  11.8  3.3  1.1  1.0  3.0  3.3  29.0          MVP-5,AS,NBA1   \n",
+       "2      ...  3.2   5.0  4.6  0.9  0.3  4.0  2.9  28.4         MVP-16,AS,NBA3   \n",
+       "3      ...  6.3  10.1  4.2  1.6  0.5  3.1  2.6  27.6          MVP-4,AS,NBA1   \n",
+       "4      ...  8.8  11.2  3.0  1.0  3.2  3.6  3.5  26.6  MVP-11,DPOY-7,AS,NBA2   \n",
+       "...    ...  ...   ...  ...  ...  ...  ...  ...   ...                    ...   \n",
+       "21048  ...  2.0   2.0  0.0  0.0  0.0  0.0  0.0   0.0                    NaN   \n",
+       "21049  ...  2.0   2.0  2.0  0.0  0.0  0.0  0.0   0.0                    NaN   \n",
+       "21050  ...  0.3   0.3  0.3  0.3  0.7  0.3  0.0   0.0                    NaN   \n",
+       "21051  ...  0.0   0.0  0.0  0.0  0.0  0.0  0.0   0.0                    NaN   \n",
+       "21052  ...  NaN   NaN  NaN  NaN  NaN  NaN  NaN   NaN                    NaN   \n",
        "\n",
-       "                      Awards  Year  \n",
-       "0       MVP-1,DPOY-7,AS,NBA1  1991  \n",
-       "1              MVP-5,AS,NBA1  1991  \n",
-       "2             MVP-16,AS,NBA3  1991  \n",
-       "3              MVP-4,AS,NBA1  1991  \n",
-       "4      MVP-11,DPOY-7,AS,NBA2  1991  \n",
-       "...                      ...   ...  \n",
-       "20564                    NaN  2024  \n",
-       "20565                    NaN  2024  \n",
-       "20566                    NaN  2024  \n",
-       "20567                    NaN  2024  \n",
-       "20568                    NaN  2024  \n",
+       "       Year  \n",
+       "0      1991  \n",
+       "1      1991  \n",
+       "2      1991  \n",
+       "3      1991  \n",
+       "4      1991  \n",
+       "...     ...  \n",
+       "21048  2025  \n",
+       "21049  2025  \n",
+       "21050  2025  \n",
+       "21051  2025  \n",
+       "21052  2025  \n",
        "\n",
-       "[20569 rows x 33 columns]"
+       "[21053 rows x 33 columns]"
       ]
      },
      "execution_count": 4,
@@ -2519,7 +2519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\smaya\\AppData\\Local\\Temp\\ipykernel_54228\\2189838679.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\smaya\\AppData\\Local\\Temp\\ipykernel_44176\\2189838679.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  players = players.groupby([\"Player\", \"Year\"]).apply(single_row)\n"
      ]
     }
@@ -2856,7 +2856,22 @@
        "       'Toronto Raptors', 'Vancouver Grizzlies', 'Washington Wizards',\n",
        "       'Memphis Grizzlies', 'New Orleans Hornets', 'Charlotte Bobcats',\n",
        "       'New Orleans/Oklahoma City Hornets', 'Oklahoma City Thunder',\n",
-       "       'Brooklyn Nets', 'New Orleans Pelicans'], dtype=object)"
+       "       'Brooklyn Nets', 'New Orleans Pelicans', 'Boston Celtics\\xa0(2)',\n",
+       "       'New York Knicks\\xa0(4)', 'Brooklyn Nets\\xa0(8)',\n",
+       "       'Philadelphia 76ers\\xa0(14)', 'Toronto Raptors\\xa0(15)',\n",
+       "       'Cleveland Cavaliers\\xa0(1)', 'Indiana Pacers\\xa0(5)',\n",
+       "       'Chicago Bulls\\xa0(6)', 'Detroit Pistons\\xa0(10)',\n",
+       "       'Milwaukee Bucks\\xa0(12)', 'Orlando Magic\\xa0(3)',\n",
+       "       'Atlanta Hawks\\xa0(7)', 'Miami Heat\\xa0(9)',\n",
+       "       'Charlotte Hornets\\xa0(11)', 'Washington Wizards\\xa0(13)',\n",
+       "       'Oklahoma City Thunder\\xa0(1)', 'Denver Nuggets\\xa0(4)',\n",
+       "       'Minnesota Timberwolves\\xa0(11)', 'Portland Trail Blazers\\xa0(13)',\n",
+       "       'Utah Jazz\\xa0(15)', 'Golden State Warriors\\xa0(2)',\n",
+       "       'Phoenix Suns\\xa0(3)', 'Los Angeles Lakers\\xa0(6)',\n",
+       "       'Sacramento Kings\\xa0(8)', 'Los Angeles Clippers\\xa0(9)',\n",
+       "       'Houston Rockets\\xa0(5)', 'Memphis Grizzlies\\xa0(7)',\n",
+       "       'San Antonio Spurs\\xa0(10)', 'Dallas Mavericks\\xa0(12)',\n",
+       "       'New Orleans Pelicans\\xa0(14)'], dtype=object)"
       ]
      },
      "execution_count": 16,
@@ -2943,7 +2958,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\smaya\\AppData\\Local\\Temp\\ipykernel_54228\\3604764357.py:1: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\smaya\\AppData\\Local\\Temp\\ipykernel_44176\\3604764357.py:1: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  stats = stats.apply(pd.to_numeric, errors = 'ignore')\n"
      ]
     }
