--- a/WebScraping.ipynb
+++ b/WebScraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = list(range(1991, 2025))\n",
+    "years = list(range(1991, 2026))\n",
     "url_base = \"https://www.basketball-reference.com/awards/awards_{}.html\""
    ]
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "      <td>0.847</td>\n",
        "      <td>11.2</td>\n",
        "      <td>0.198</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -739,7 +739,7 @@
        "      <td>0.833</td>\n",
        "      <td>10.4</td>\n",
        "      <td>0.189</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -763,7 +763,7 @@
        "      <td>0.836</td>\n",
        "      <td>7.5</td>\n",
        "      <td>0.130</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -787,7 +787,7 @@
        "      <td>0.704</td>\n",
        "      <td>12.6</td>\n",
        "      <td>0.206</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -811,7 +811,7 @@
        "      <td>0.856</td>\n",
        "      <td>8.3</td>\n",
        "      <td>0.142</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -827,16 +827,16 @@
        "8    9      Kevin Durant   35  PHO      0        1      990  0.001  75  37.2   \n",
        "\n",
        "   ...   TRB  AST  STL  BLK    FG%    3P%    FT%    WS  WS/48  Year  \n",
-       "4  ...   3.6  6.7  0.9  0.2  0.479  0.401  0.847  11.2  0.198  2024  \n",
-       "5  ...   8.1  4.9  1.0  0.6  0.471  0.376  0.833  10.4  0.189  2024  \n",
-       "6  ...   5.4  5.1  1.3  0.5  0.461  0.357  0.836   7.5  0.130  2024  \n",
-       "7  ...  13.7  8.2  0.9  0.6  0.594  0.379  0.704  12.6  0.206  2024  \n",
-       "8  ...   6.6  5.0  0.9  1.2  0.523  0.413  0.856   8.3  0.142  2024  \n",
+       "4  ...   3.6  6.7  0.9  0.2  0.479  0.401  0.847  11.2  0.198  2025  \n",
+       "5  ...   8.1  4.9  1.0  0.6  0.471  0.376  0.833  10.4  0.189  2025  \n",
+       "6  ...   5.4  5.1  1.3  0.5  0.461  0.357  0.836   7.5  0.130  2025  \n",
+       "7  ...  13.7  8.2  0.9  0.6  0.594  0.379  0.704  12.6  0.206  2025  \n",
+       "8  ...   6.6  5.0  0.9  1.2  0.523  0.413  0.856   8.3  0.142  2025  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -979,63 +979,87 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>766</th>\n",
-       "      <td>569</td>\n",
-       "      <td>Ron Harper Jr.</td>\n",
-       "      <td>23</td>\n",
-       "      <td>TOR</td>\n",
+       "      <th>479</th>\n",
+       "      <td>459</td>\n",
+       "      <td>Riley Minix</td>\n",
+       "      <td>24</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>460</td>\n",
+       "      <td>Markieff Morris</td>\n",
+       "      <td>35</td>\n",
+       "      <td>DAL</td>\n",
        "      <td>PF</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>767</th>\n",
-       "      <td>570</td>\n",
-       "      <td>Justin Jackson</td>\n",
-       "      <td>28</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>768</th>\n",
-       "      <td>571</td>\n",
-       "      <td>Dmytro Skapintsev</td>\n",
+       "      <th>481</th>\n",
+       "      <td>461</td>\n",
+       "      <td>Drew Peterson</td>\n",
        "      <td>25</td>\n",
-       "      <td>NYK</td>\n",
-       "      <td>C</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>462</td>\n",
+       "      <td>Jalen Pickett</td>\n",
+       "      <td>25</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>SG</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>...</td>\n",
@@ -1048,34 +1072,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>769</th>\n",
-       "      <td>572</td>\n",
-       "      <td>Javonte Smart</td>\n",
-       "      <td>24</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>770</th>\n",
+       "      <th>483</th>\n",
        "      <td>NaN</td>\n",
        "      <td>League Average</td>\n",
        "      <td>NaN</td>\n",
@@ -1096,7 +1096,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1104,24 +1104,24 @@
        "</div>"
       ],
       "text/plain": [
-       "      Rk             Player  Age Team  Pos    G   GS   MP   FG  FGA  ...  DRB  \\\n",
-       "766  569     Ron Harper Jr.   23  TOR   PF    1    0  4.0  0.0  0.0  ...  0.0   \n",
-       "767  570     Justin Jackson   28  MIN   SF    2    0  0.5  0.0  0.0  ...  0.0   \n",
-       "768  571  Dmytro Skapintsev   25  NYK    C    2    0  1.0  0.0  0.5  ...  0.0   \n",
-       "769  572      Javonte Smart   24  PHI   PG    1    0  1.0  0.0  0.0  ...  0.0   \n",
-       "770  NaN     League Average  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  ...  NaN   \n",
+       "      Rk           Player  Age Team  Pos    G   GS   MP   FG  FGA  ...  DRB  \\\n",
+       "479  459      Riley Minix   24  SAS   SF    1    0  7.0  0.0  1.0  ...  2.0   \n",
+       "480  460  Markieff Morris   35  DAL   PF    1    0  5.0  0.0  1.0  ...  2.0   \n",
+       "481  461    Drew Peterson   25  BOS   PF    3    0  2.3  0.0  0.3  ...  0.3   \n",
+       "482  462    Jalen Pickett   25  DEN   SG    2    0  2.0  0.0  0.5  ...  0.0   \n",
+       "483  NaN   League Average  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  ...  NaN   \n",
        "\n",
        "     TRB  AST  STL  BLK  TOV   PF  PTS Awards  Year  \n",
-       "766  0.0  1.0  0.0  0.0  0.0  2.0  0.0    NaN  2024  \n",
-       "767  0.0  0.0  0.0  0.0  0.0  0.0  0.0    NaN  2024  \n",
-       "768  0.0  0.0  0.0  0.0  0.0  0.0  0.0    NaN  2024  \n",
-       "769  0.0  0.0  0.0  0.0  0.0  0.0  0.0    NaN  2024  \n",
-       "770  NaN  NaN  NaN  NaN  NaN  NaN  NaN    NaN  2024  \n",
+       "479  2.0  0.0  0.0  0.0  0.0  0.0  0.0    NaN  2025  \n",
+       "480  2.0  2.0  0.0  0.0  0.0  0.0  0.0    NaN  2025  \n",
+       "481  0.3  0.3  0.3  0.7  0.3  0.0  0.0    NaN  2025  \n",
+       "482  0.0  0.0  0.0  0.0  0.0  0.0  0.0    NaN  2025  \n",
+       "483  NaN  NaN  NaN  NaN  NaN  NaN  NaN    NaN  2025  \n",
        "\n",
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1221,78 +1221,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>50</td>\n",
-       "      <td>32</td>\n",
-       "      <td>.610</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>.667</td>\n",
        "      <td>—</td>\n",
-       "      <td>117.9</td>\n",
-       "      <td>115.6</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Dallas Mavericks*</td>\n",
+       "      <td>111.3</td>\n",
+       "      <td>106.2</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Houston Rockets (5)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>49</td>\n",
-       "      <td>33</td>\n",
-       "      <td>.598</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>.583</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>115.1</td>\n",
-       "      <td>110.7</td>\n",
-       "      <td>4.46</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>New Orleans Pelicans*</td>\n",
+       "      <td>121.1</td>\n",
+       "      <td>112.9</td>\n",
+       "      <td>5.31</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Memphis Grizzlies (7)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>41</td>\n",
-       "      <td>41</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "      <td>.500</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>114.3</td>\n",
-       "      <td>113.2</td>\n",
-       "      <td>1.24</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Houston Rockets</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>109.8</td>\n",
+       "      <td>109.2</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>San Antonio Spurs (10)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>27</td>\n",
-       "      <td>55</td>\n",
-       "      <td>.329</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>105.8</td>\n",
-       "      <td>112.8</td>\n",
-       "      <td>-6.57</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Memphis Grizzlies</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>.455</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>114.4</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Dallas Mavericks (12)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>22</td>\n",
-       "      <td>60</td>\n",
-       "      <td>.268</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>112.1</td>\n",
-       "      <td>118.6</td>\n",
-       "      <td>-5.80</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>San Antonio Spurs</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>.250</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>105.4</td>\n",
+       "      <td>115.7</td>\n",
+       "      <td>-9.12</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>New Orleans Pelicans (14)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     W   L  W/L%    GB   PS/G   PA/G    SRS  Year                   Team\n",
-       "13  50  32  .610     —  117.9  115.6   2.30  2024      Dallas Mavericks*\n",
-       "14  49  33  .598   1.0  115.1  110.7   4.46  2024  New Orleans Pelicans*\n",
-       "15  41  41  .500   9.0  114.3  113.2   1.24  2024        Houston Rockets\n",
-       "16  27  55  .329  23.0  105.8  112.8  -6.57  2024      Memphis Grizzlies\n",
-       "17  22  60  .268  28.0  112.1  118.6  -5.80  2024      San Antonio Spurs"
+       "    W  L  W/L%   GB   PS/G   PA/G    SRS  Year                       Team\n",
+       "13  8  4  .667    —  111.3  106.2   7.29  2025        Houston Rockets (5)\n",
+       "14  7  5  .583  1.0  121.1  112.9   5.31  2025      Memphis Grizzlies (7)\n",
+       "15  6  6  .500  2.0  109.8  109.2   0.93  2025     San Antonio Spurs (10)\n",
+       "16  5  6  .455  2.5  114.4  111.0   3.98  2025      Dallas Mavericks (12)\n",
+       "17  3  9  .250  5.0  105.4  115.7  -9.12  2025  New Orleans Pelicans (14)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
